--- a/templates/rigging.html
+++ b/templates/rigging.html
@@ -30,12 +30,12 @@
   > Add notes to rubric
   <br/>
 
-  <input type="button" value="Save Changes" id="save_changes" >
+  <input type="button" value="Save Changes" id="save_changes" disabled="true">
   <input type="button" value="Dump JSON" id="dump_json" >
   <input type="button" value="Retore From JSON" id="restore_from_json" >
 </div>
-<div id="submission">
-</div>
 <div id="evaluation">
+</div>
+<div id="submission">
 </div>
 {% endblock %}
