--- a/templates/layout.html
+++ b/templates/layout.html
@@ -2,6 +2,7 @@
 <html>
   <head>
     <title>Rigging</title>
+    <link rel="icon" type="image/png" href="static/favicon.png">
     <link rel="stylesheet" type="text/css" href="static/common.css">
     {% block head %}{% endblock %}
   </head>
@@ -23,7 +24,7 @@
       {% if username != None %}
         {{ username }} <a href="/logout">Log Out</a>
       {% else %}
-        <a href="/login">Log In</a>
+        ???
       {% endif %}
     {% endwith %}
     </div>
