--- a/templates/login.html
+++ b/templates/login.html
@@ -5,10 +5,12 @@
 {% block body %}
 <form action="/login" method="POST">
   <p>
-  Username: <input type="text" name="username">
+    Username:
+    <input type="text" name="username" autocomplete="username">
   </p>
   <p>
-  Password: <input type="password" name="password">
+    Password:
+    <input type="password" name="password" autocomplete="current-password">
   </p>
   <input type="submit" value="Log in">
 </form>
