Added a notion of "externals" which populate their own un-editable notes (but notes can still be disabled or have their values adjusted). Got the different note categories looking a bit nicer in the process. Need to add a mechanism to "re-run" externals in a category, and then make the missing-files-detector be a true external, and then add a Codder external (perhaps via plugin?).
-Peter Mawhorter

--- a/static/rigging.css
+++ b/static/rigging.css
@@ -259,3 +259,20 @@ input.disabled {
 .dialog-buttons {
   text-align: center;
 }
+
+.title {
+  font-weight: bold;
+}
+
+.empty {
+  display: none;
+}
+
+.notes {
+  border-left: 1.5pt solid black;
+  border-top: 1.5pt solid black;
+  border-radius: 3pt;
+  margin-bottom: 2pt;
+  padding-left: 2pt;
+  margin-right: 2pt;
+}
